.local/kubernetes/ingresses/client-service-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-service-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: client-service.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service-np
                port:
                  number: 8080
